test/tests/compiler/6_statements_and_conditional_expressions/valid/multiple_if.plx
pub fn main(none) i32 {
    a: i32 = 0
    b: i32 = 0

    if a {
        a = 2
    }
    else {
        a = 3
    }

    if b {
        b = 4
    }
    else {
        b = 5
    }

    return a + b
}
