test/tests/compiler/6_statements_and_conditional_expressions/invalid_parse/declaration_as_statement.plx
pub fn main(none) i32 {
    if i: i32 = 0
}
